# Chess_Assignment

./: .gitignore  Bishop.cpp  Bishop.h  CMakeLists.txt  ChessPieceI.cpp  ChessPieceI.h  Enums.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Table.cpp  Table.h  TableLoader.cpp  TableLoader.h  ThreatCalculator.cpp  ThreatCalculator.h  main.cpp
ExampleRawTables/: board3.txt  table1.txt
html/: Bishop_8h_source.html  ChessPieceI_8h_source.html  Enums_8h_source.html  King_8h_source.html  Knight_8h_source.html  Pawn_8h_source.html  Queen_8h_source.html  Rook_8h_source.html  TableLoader_8h_source.html  Table_8h_source.html  ThreatCalculator_8h_source.html  annotated.html  classBishop-members.html  classBishop.html  classChessPieceI-members.html  classChessPieceI.html  classKing-members.html  classKing.html  classKnight-members.html  classKnight.html  classPawn-members.html  classPawn.html  classQueen-members.html  classQueen.html  classRook-members.html  classRook.html  classTable-members.html  classTable.html  classTableLoader-members.html  classTableLoader.html  classThreatCalculator-members.html  classThreatCalculator.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html
html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
